--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ build:
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5
   - FC=ifort CC=icc CXX=icpc cmake .
-  - make
+  - make driver
   artifacts:
     paths:
     - build/
@@ -13,7 +13,4 @@ test:
   stage: test
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
-  - make test
-  artifacts:
-    paths:
-    - ./*.xml
+  - ./driver
