Fixes for Chase-elemental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,5 @@ if( CHASE_OUTPUT )
 endif()
 
 # Driver
-add_executable( "driver" EXCLUDE_FROM_ALL driver/noinput.cpp )
-#add_executable( "driver" driver/noinput.cpp )
+add_executable( "chase_driver" EXCLUDE_FROM_ALL driver/noinput.cpp )
 target_link_libraries(driver chase_mpi)
