--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 # -*- Mode: cmake -*-
 
-cmake_minimum_required( VERSION 3.7 )
+cmake_minimum_required( VERSION 3.6 )
 
 project( ChASE )
 
 # ## algorithm ##
 add_library(chase_algorithm INTERFACE)
 target_include_directories(chase_algorithm INTERFACE "${CMAKE_CURRENT_LIST_DIR}")
-target_compile_features(chase_algorithm INTERFACE cxx_std_11)
+target_compile_features(chase_algorithm INTERFACE cxx_auto_type)
 
 # ## ChASE-MPI ##
 add_subdirectory( "ChASE-MPI/")
