--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,17 @@ build:
   stage: build
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5
-  - FC=ifort CC=icc CXX=icpc cmake .
-  - make chase_driver
+  - mkdir -p build
+  - cd build
+  - FC=ifort CC=icc CXX=icpc cmake ..
+  - make
   artifacts:
     paths:
     - Makefile
     - ./chase_driver
-
+    - CTestTestfile.cmake
 test:
   stage: test
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098
-  - ./chase_driver
+  - make test
