--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,11 +8,12 @@ build:
   - make VERBOSE=1
   artifacts:
     paths:
-    - Makefile
-    - ./chase_driver
-    - CTestTestfile.cmake
+    - build/Makefile
+    - build/chase_driver
+    - build/CTestTestfile.cmake
 test:
   stage: test
   script:
   - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5 CUDA
+  - cd build
   - make test
