--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -3,6 +3,7 @@
 
 
 include("${CMAKE_CURRENT_LIST_DIR}/chase-header.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/chase-seq.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-mpi.cmake")
 
 check_required_components("@PROJECT_NAME@")
