--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -6,6 +6,19 @@ if( ${Boost_FOUND} )
   #                         chase_mpi_driver interface
   ##############################################################################
 
+  add_library( chase_seq_driver INTERFACE )
+
+  target_link_libraries(chase_seq_driver INTERFACE
+    chase_seq
+    ${Boost_LIBRARIES}
+    )
+  target_include_directories(chase_seq_driver INTERFACE
+    ${Boost_INCLUDE_DIRS}
+    )
+  target_include_directories( chase_seq_driver INTERFACE
+    "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>"
+    )
+
   add_library( chase_mpi_driver INTERFACE )
 
   target_link_libraries(chase_mpi_driver INTERFACE
@@ -26,44 +39,31 @@ if( ${Boost_FOUND} )
   add_executable( "2_input_output_seq"
     "2_input_output.cpp"
     )
-  target_link_libraries( "2_input_output_seq" PRIVATE chase_mpi_driver )
+  target_link_libraries( "2_input_output_seq" PRIVATE chase_seq_driver )
 
   ##############################################################################
   #           2_input_output: no GPU, MPI ($A$ distributed among MPI-ranks)
   ##############################################################################
+
   add_executable( "2_input_output" "2_input_output.cpp" )
   target_link_libraries( "2_input_output" chase_mpi_driver )
   target_compile_definitions( "2_input_output" PRIVATE USE_MPI=1 )
-
-  ##############################################################################
-  #        2_input_output_gpu: 1 GPU/node, MPI ($A$ distributed among MPI-ranks)
-  #   2_input_output_mgpu: multi-GPU/node, MPI ($A$ distributed among MPI-ranks)
-  ##############################################################################
 
   if(TARGET chase_cuda )
     enable_language(CUDA)
 
     option(TIMER "Builder timer routines" OFF)
 
-    add_executable( 2_input_output_gpu "2_input_output.cpp" )
-    target_link_libraries( 2_input_output_gpu
-      chase_mpi_driver
-      chase_cuda
-      ${CUDA_CUBLAS_LIBRARIES}
-      ${CUDA_LIBRARIES}
-      )
-    if(TIMER)
-      target_compile_definitions( "2_input_output_gpu" PRIVATE DRIVER_BUILD_CUDA=1 USE_MPI=1 USE_TIMER=1)
-	else()
-      target_compile_definitions( "2_input_output_gpu" PRIVATE DRIVER_BUILD_CUDA=1 USE_MPI=1 )
-	endif()
+  ##############################################################################
+  #   2_input_output_mgpu: multi-GPU/node, MPI ($A$ distributed among MPI-ranks)
+  ##############################################################################
 
     add_executable( 2_input_output_mgpu "2_input_output.cpp" )
     target_link_libraries( 2_input_output_mgpu
       chase_mpi_driver
       chase_cuda
-      ${CUDA_CUBLAS_LIBRARIES}
-      ${CUDA_LIBRARIES}
+#      ${CUDA_CUBLAS_LIBRARIES}
+#      ${CUDA_LIBRARIES}
       )
     if(TIMER) 
       target_compile_definitions( "2_input_output_mgpu" PRIVATE DRIVER_BUILD_MGPU=1 USE_MPI=1 USE_TIMER=1)
