simplify cmake for example

--- a/examples/4_gev/CMakeLists.txt
+++ b/examples/4_gev/CMakeLists.txt
@@ -12,16 +12,28 @@ find_package( Boost COMPONENTS serialization program_options )
 
 if( ${Boost_FOUND} )
 
-  ##############################################################################
-  #                         chase_mpi_driver interface
-  ##############################################################################
-
   if(SCALAPACK_FOUND)
+
+    ##############################################################################
+    #           4_gev: no GPU, MPI ($A$ distributed among MPI-ranks)
+    ##############################################################################
+
     add_executable( "4_gev" 4_gev.cpp )
-    target_link_libraries(4_gev chase_mpi_driver SCALAPACK::SCALAPACK ${Boost_LIBRARIES})
+    target_link_libraries("4_gev" chase_mpi SCALAPACK::SCALAPACK ${Boost_LIBRARIES})
+
+    ##############################################################################
+    #     4_gev_mgpu: multi-GPU/node, MPI ($A$ distributed among MPI-ranks)
+    ##############################################################################
+    if(TARGET chase_cuda )
+      enable_language(CUDA)
+      add_executable( "4_gev_mgpu" 4_gev.cpp )
+      target_link_libraries("4_gev_mgpu" chase_mpi chase_cuda SCALAPACK::SCALAPACK ${Boost_LIBRARIES})
+      target_compile_definitions( "4_gev_mgpu" PRIVATE DRIVER_BUILD_MGPU=1)
+    endif()
+
   endif()
 else()
-  message( "Boost not found, not building this example" )
+  message( "Boost not found, not building example 4" )
 endif()
 
 
