add cuslover for QR and HEEVD

--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -120,6 +120,7 @@ if(CMAKE_CUDA_COMPILER)
     )
   target_link_libraries( chase_cuda INTERFACE
     ${CUDA_CUBLAS_LIBRARIES}
+    ${CUDA_cusolver_LIBRARY}
     )
 
   install( TARGETS chase_cuda
