--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
+default:
+  tags: [ public-docker ]
+  image:
+    name: gitlab.version.fz-juelich.de:5555/sharedrunner/opensuse
+
 build:
   stage: build
   script:
-  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5 CUDA
   - mkdir -p build
   - cd build
-  - FC=ifort CC=icc CXX=icpc cmake ..
+  - FC=gfortran CC=gcc CXX=g++ cmake ..
   - make VERBOSE=1
   artifacts:
     paths:
@@ -14,6 +18,5 @@ build:
 test:
   stage: test
   script:
-  - module load Intel/2017.0.098-GCC-5.4.0  IntelMPI/2017.0.098 Boost/1.61.0-Python-2.7.12 imkl/2017.0.098 HDF5 CUDA
   - cd build
-  - make test
+  - CTEST_OUTPUT_ON_FAILURE=1 make test
