--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -36,6 +36,16 @@ if( ${Boost_FOUND} )
   
   if(TARGET chase_cuda )
     enable_language(CUDA)
+  
+    if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
+      set (CMAKE_CUDA_ARCHITECTURES "80")
+    endif()
+
+    if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
+      foreach(CODE ${CMAKE_CUDA_ARCHITECTURES})
+        set (CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -gencode arch=compute_${CODE},code=sm_${CODE}")
+      endforeach()
+    endif()
 
     add_executable( 2_input_output_mgpu "2_input_output.cpp" )
     target_link_libraries( 2_input_output_mgpu chase_mpi chase_cuda ${Boost_LIBRARIES})
