introduce a error to manage when flag n in the examples have incorrect size of the matrices

--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -1,4 +1,4 @@
-find_package( Boost COMPONENTS serialization program_options )
+find_package( Boost COMPONENTS serialization program_options filesystem )
 
 if( ${Boost_FOUND} )
 
