--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -109,9 +109,9 @@ include(CheckLanguage)
 check_language(CUDA)
 if(CMAKE_CUDA_COMPILER)
 
-  if (${CMAKE_VERSION} VERSION_LESS "3.18.0")
+  if (${CMAKE_VERSION} VERSION_LESS_EQUAL "3.18.0")
     find_package(CUDA REQUIRED)
-  elseif(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.17.0")
+  elseif(${CMAKE_VERSION} VERSION_GREATER "3.18.0")
     find_package(CUDAToolkit REQUIRED)	  
     set(CUDA_CUBLAS_LIBRARIES CUDA::cublas)
     set(CUDA_cusolver_LIBRARY CUDA::cusolver)    
