--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,8 @@ else()
   target_link_libraries(chase_driver chase_mpi)
 endif()
 
+add_subdirectory("interface")
+
 # Examples
 option(BUILD_WITH_EXAMPLES "Build the examples" OFF)
 if(BUILD_WITH_EXAMPLES)
