--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -5,5 +5,6 @@
 include("${CMAKE_CURRENT_LIST_DIR}/chase-header.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-seq.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-mpi.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/chase-c.cmake")
 
 check_required_components("@PROJECT_NAME@")
