--- a/cmake/Config_CUDA.cmake.in
+++ b/cmake/Config_CUDA.cmake.in
@@ -6,4 +6,6 @@ include("${CMAKE_CURRENT_LIST_DIR}/chase-header.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-seq.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-mpi.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-cuda.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/chase-c.cmake")
+
 check_required_components("@PROJECT_NAME@")
