--- a/cmake/Config_CUDA.cmake.in
+++ b/cmake/Config_CUDA.cmake.in
@@ -7,5 +7,6 @@ include("${CMAKE_CURRENT_LIST_DIR}/chase-seq.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-mpi.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-cuda.cmake")
 include("${CMAKE_CURRENT_LIST_DIR}/chase-c.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/chase-f.cmake")
 
 check_required_components("@PROJECT_NAME@")
