--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -1,5 +1,4 @@
 add_library( "chase_c" "chase_c.cpp" )
-message("Use distributed multi-GPU version of ChASE")
 target_link_libraries("chase_c" PUBLIC chase_mpi)
 
 install( TARGETS chase_c
@@ -16,4 +15,45 @@ install(EXPORT chase-c
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
   )
 
+enable_language( Fortran )
+set(
+  MODULE_OUTPUT_DIR
+  "${CMAKE_CURRENT_BINARY_DIR}/Mod"
+)
+
+add_library("chase_f" "chase_f.f90")
+set_target_properties(
+  "chase_f"
+  PROPERTIES
+  POSITION_INDEPENDENT_CODE TRUE
+  Fortran_MODULE_DIRECTORY "${MODULE_OUTPUT_DIR}"
+)
+
+target_include_directories(
+  "chase_f"
+  INTERFACE
+  $<BUILD_INTERFACE:${MODULE_OUTPUT_DIR}>
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+target_link_libraries("chase_f" PUBLIC chase_c)
+
+install( TARGETS chase_f
+  EXPORT chase-f
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  )
+
+install(
+  DIRECTORY
+  "${MODULE_OUTPUT_DIR}/"
+  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
+)
+
+install(EXPORT chase-f
+  NAMESPACE ChASE::
+  FILE chase-f.cmake
+  EXPORT_LINK_INTERFACE_LIBRARIES
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
+  )
 
