add interface with single precsion scalar

--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -149,7 +149,7 @@ if(CMAKE_CUDA_COMPILER)
  
   target_include_directories(
       chase_cuda
-      PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
+      PUBLIC #$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
              $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/ChASE-MPI>)
 
   target_include_directories( chase_cuda INTERFACE
