add a binary which generates and saves a large set of random number into local binary file. This is helpful when Chase uses random initial guess vectors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,13 +65,7 @@ if(BUILD_WITH_EXAMPLES)
         add_subdirectory("./examples")
 endif()
 
-# Unit tests
-option(UNITTEST "Build unit tests" OFF)
-if(UNITTEST)
-	message(STATUS "Building unittests")
-	add_subdirectory("./unittests")
-endif()
-
+add_subdirectory("./utils")
 enable_testing()
 add_test( BASIC "chase_driver" )
 
