--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required( VERSION 3.8 )
 
 project( ChASE LANGUAGES C CXX VERSION 0.91 )
-
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # ## algorithm ##
 add_library(chase_algorithm INTERFACE)
 
