inital add ScaLAPACK support in ChASE

--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -37,6 +37,8 @@ find_package( BLAS   REQUIRED )
 find_package( LAPACK REQUIRED )
 find_package( MPI    REQUIRED )
 
+find_package( SCALAPACK REQUIRED)
+
 target_include_directories( chase_seq INTERFACE
   ${MPI_CXX_INCLUDE_PATH}
   )
@@ -44,7 +46,8 @@ target_include_directories( chase_seq INTERFACE
 target_link_libraries( chase_seq INTERFACE
   ${BLAS_LIBRARIES}
   ${LAPACK_LIBRARIES}
-  ${MPI_CXX_LIBRARIES}  
+  ${MPI_CXX_LIBRARIES} 
+  SCALAPACK::SCALAPACK 
   )
 target_compile_options( chase_seq INTERFACE
   ${CMAKE_C_FLAGS}
@@ -73,6 +76,7 @@ target_link_libraries( chase_mpi INTERFACE
   ${BLAS_LIBRARIES}
   ${LAPACK_LIBRARIES}
   ${MPI_CXX_LIBRARIES}
+  SCALAPACK::SCALAPACK
   )
 target_compile_options( chase_mpi INTERFACE
   ${CMAKE_C_FLAGS}
