--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -47,16 +47,16 @@ if( ${Boost_FOUND} )
       endforeach()
     endif()
 
-    #    add_executable( 2_input_output_mgpu "2_input_output.cpp" )
-    #target_link_libraries( 2_input_output_mgpu chase_mpi chase_cuda ${Boost_LIBRARIES})
-    #target_compile_definitions( "2_input_output_mgpu" PRIVATE DRIVER_BUILD_MGPU=1 CHASE_OUTPUT=1 PRINT_EIGENVALUES=1 USE_MPI=1)
+    add_executable( 2_input_output_mgpu "2_input_output.cpp" )
+    target_link_libraries( 2_input_output_mgpu chase_mpi chase_cuda ${Boost_LIBRARIES})
+    target_compile_definitions( "2_input_output_mgpu" PRIVATE DRIVER_BUILD_MGPU=1 CHASE_OUTPUT=1 PRINT_EIGENVALUES=1 USE_MPI=1)
 
     #add_executable( 2_input_output_mgpu_block_cyclic "2_input_output.cpp" )
     #target_link_libraries( 2_input_output_mgpu_block_cyclic chase_mpi chase_cuda ${Boost_LIBRARIES})
     #target_compile_definitions( "2_input_output_mgpu_block_cyclic" PRIVATE DRIVER_BUILD_MGPU=1 USE_MPI=1 USE_BLOCK_CYCLIC=1)
 
-    #install (TARGETS 2_input_output_mgpu
-    #          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+    install (TARGETS 2_input_output_mgpu
+             RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
       #install (TARGETS 2_input_output_mgpu_block_cyclic
       #          RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
