add a new multi-GPU DLA implementation with CholQR-GPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ add_executable( "chase_driver" tests/noinput.cpp )
 
 if(TARGET chase_cuda )
   enable_language(CUDA)
-  target_link_libraries(chase_driver chase_mpi chase_cuda)
+  target_link_libraries(chase_driver chase_mpi chase_cuda ${CUDA_nvToolsExt_LIBRARY})
   target_compile_definitions(chase_driver PRIVATE USE_GPU=1)
 else()
   target_link_libraries(chase_driver chase_mpi)
